feature(MWSV-41): edits for style

--- a/src/components/molecules/slider/Slider.css
+++ b/src/components/molecules/slider/Slider.css
@@ -6,3 +6,4 @@
 .swiper-button-disabled svg {
     filter: invert(72%) sepia(2%) saturate(11%) hue-rotate(336deg) brightness(85%) contrast(80%);
 }
+.listing-details .swiper-button-disabled{display: none!important;opacity: 0!important;}
