feature(MWSV-76): added icons and packages, edited styles

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -15,3 +15,18 @@
     background-color: #F6D2DC;
     border-color: #D01E50;
 }
+
+@layer utilities {
+    @variants responsive {
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+
+        /* Hide scrollbar for IE, Edge and Firefox */
+        .no-scrollbar {
+            -ms-overflow-style: none; /* IE and Edge */
+            scrollbar-width: none; /* Firefox */
+        }
+    }
+}
