--- a/src/components/atoms/datePicker/DatePicker.css
+++ b/src/components/atoms/datePicker/DatePicker.css
@@ -137,6 +137,10 @@
     padding-top: 0;
 }
 
-.booking-date .DayPicker, .booking-date .DayPicker .DayPicker_transitionContainer{
-    border-radius: 12px!important;
+.booking-date .DayPicker, .booking-date .DayPicker .DayPicker_transitionContainer {
+    border-radius: 12px !important;
+}
+
+.CalendarMonthGrid__vertical_scrollable{
+    padding-bottom: 100px;
 }
